funcionalidad elegir slaves automatico

--- a/app/dashboard/templates/dashboard/home.html
+++ b/app/dashboard/templates/dashboard/home.html
@@ -210,6 +210,9 @@
           <a href="{% url 'list_tasks_slave' 'slave3' %}" class="btn"
             >📄 Ver Slave 3</a
           >
+          <a href="{% url 'list_tasks_dynamic' %}" class="btn"
+            >🎯 Ver (Automático)</a
+          >
         </nav>
       </header>
 
